Preparatory works for a search user component.

--- a/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
+++ b/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -16,23 +15,6 @@
                 "title": "Permissions"
             }
         },
-        "permissionsTypeConverter": {
-            "prototype": "core/converter/select-option-converter"
-        },
-        "usersOptionsConverter": {
-            "prototype": "core/converter/select-option-converter",
-            "properties": {
-                "labelPropertyName": "username",
-                "valuePropertyName": "username"
-            }
-        },
-        "groupsOptionsConverter": {
-            "prototype": "core/converter/select-option-converter",
-            "properties": {
-                "labelPropertyName": "name",
-                "valuePropertyName": "name"
-            }
-        },
         "permissionsType": {
             "prototype": "blue-shark/ui/field-text.reel",
             "properties": {
@@ -44,27 +26,25 @@
             }
         },
         "ownerUser": {
-            "prototype": "blue-shark/ui/field-select.reel",
+            "prototype": "blue-shark/ui/field-search.reel",
             "properties": {
                 "element": {"#": "ownerUser"},
-                "label": "Owner user",
-                "converter": {"@": "usersOptionsConverter"}
+                "label": "Owner user"
             },
             "bindings": {
-                "selectedValue": {"<->": "@owner.object.permissions.user"},
-                "options": {"<-": "@owner.users.sorted{builtin + username}"}
+                "controller": {"<-": "@owner.usersSearchController"},
+                "value": {"<->": "@owner.object.permissions.user"}
             }
         },
         "ownerGroup": {
-            "prototype": "blue-shark/ui/field-select.reel",
+            "prototype": "blue-shark/ui/field-search.reel",
             "properties": {
                 "element": {"#": "ownerGroup"},
-                "label": "Owner group",
-                "converter": {"@": "groupsOptionsConverter"}
+                "label": "Owner group"
             },
             "bindings": {
-                "selectedValue": {"<->": "@owner.object.permissions.group"},
-                "options": {"<-": "@owner.groups.sorted{builtin + name}"}
+                "controller": {"<-": "@owner.groupsSearchController"},
+                "value": {"<->": "@owner.object.permissions.group"}
             }
         },
         "modes": {
