Make alerts and tasks show the correct timezone/date offset (this fix also needs a middleware fix before timezone will auto set without a browser refresh)
Ticket: #20282

--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
@@ -36,11 +36,10 @@
         "timestamp": {
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "timestamp"},
-                "value": "{date, HH:mm:ss}"
+                "element": {"#": "timestamp"}
             },
             "bindings": {
-                "args": {"<-": "@owner.object.startDate && {date: @owner.object.startDate}"}
+                "value": {"<-": "@owner.object.startDate"}
             }
         },
         "progress": {
