--- a/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/alert-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/alert-notification.reel/alert-notification.html
@@ -33,11 +33,10 @@
         "timestamp": {
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "timestamp"},
-                "value": "{date, HH:mm:ss}"
+                "element": {"#": "timestamp"}
             },
             "bindings": {
-                "args": {"<-": "@owner.object.date && {date: @owner.object.date}"}
+                "value": {"<-": "@owner.object.date"}
             }
         },
         "dismissButton": {
