--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <script src="node_modules/plottable/plottable.js" defer></script>
     <script src="vendors/jquery-1.12.4.min.js" charset="utf-8"></script>
     <script src="node_modules/maphilight/jquery.maphilight.js" charset="utf-8" ></script>
+    <script src="node_modules/smoothscroll-polyfill/src/smoothscroll.js"></script>
     <script src="vendors/timezone-picker.js" charset="utf-8" defer></script>
+
     <script type="text/montage-serialization">
     {
         "owner": {
