Fix encrypted import button activation

--- a/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-importer.reel/encrypted-volume-importer.html
@@ -98,7 +98,7 @@
                 "value": "Import"
             },
             "bindings": {
-                "disabled": {"<-": "!@name.value || !@password.value || !@key.value"}
+                "disabled": {"<-": "!@name.value || (!@disks.disks || @disks.disks.length == 0) || (!@password.value && !@key.value)"}
             }
         }
     }
