Fixed unix permissions control

--- a/ui/controls/unixPermissions.reel/unixPermissions.html
+++ b/ui/controls/unixPermissions.reel/unixPermissions.html
@@ -154,7 +154,8 @@
             },
             "bindings": {
                 "disabled": {"<-": "@owner.disabled"},
-                "value": {"<->": "@owner.modeBits"}
+                "value": {"<->": "@owner.modeBits"},
+                "delegate": {"<-": "@owner.modeBitsInputDelegate"}
             }
         },
         "title": {
