ADDED: hide dc ip when it's not running

--- a/ui/inspectors/service.reel/dc-service.reel/dc-service.html
+++ b/ui/inspectors/service.reel/dc-service.reel/dc-service.html
@@ -42,7 +42,8 @@
                 "label": "Domain Controller IP address"
             },
             "bindings": {
-                "value": {"<-": "!!@owner.dcIp ? @owner.dcIp : ''"}
+                "value": {"<-": "@owner.dcIp"},
+                "classList.has('hide')": {"<-": "@owner.context.object.state != 'RUNNING'"}
             }
         },
         "dcUrl": {
