Fixed: Volume 'upgrade' button is displayed for fully upgraded pools

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -166,7 +166,7 @@
                 "value": "Upgrade"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!!@owner.upgraded || @owner.object.status == 'LOCKED'"}
+                "classList.has('hide')": {"<-": "!!@owner.object.upgraded || @owner.object.status == 'LOCKED'"}
             }
         },
         "importShares": {
