--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -207,7 +207,7 @@
             "prototype": "blue-shark/ui/field-checkbox.reel",
             "properties": {
                 "element": {"#": "delayUpdates"},
-                "label": "Preserve attributes"
+                "label": "Delay Updates"
             },
             "bindings": {
                 "checked": {"<->": "@owner.object.0.rsync_properties.delay_updates"}
