--- a/ui/controls/ip-aliases.reel/ip-aliases.html
+++ b/ui/controls/ip-aliases.reel/ip-aliases.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <link rel="stylesheet" type="text/css" href="table-routes.css">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="ip-aliases.css">
     <script type="text/montage-serialization">
     {
         "owner": {
@@ -18,32 +18,36 @@
                 "delegate": {"@": "owner"},
                 "columns":  [
                     {
-                        "value": "Id"
+                        "value": "Type"
                     },
                     {
-                        "value": "Network"
+                        "value": "Address"
                     },
                     {
-                        "value": "Gateway"
+                        "value": "Subnet mask / Prefix length"
                     }
                 ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.values"},
+                "rows": {"<->": "@owner.addresses"},
                 "label": {"<->": "@owner.label"}
             }
         },
 
         "defaultHeader": {
-            "prototype": "../table-container-default-header.reel",
+            "prototype": "./table-header.reel",
             "properties": {
                 "element": {"#": "tableHeader"},
                 "table": {"@": "table"}
+            },
+            "bindings": {
+                "canAdd": {"<-": "@owner.canAdd"},
+                "canDelete": {"<-": "@owner.canDelete"}
             }
         },
 
         "newEntry": {
-            "prototype": "./table-row-route.reel",
+            "prototype": "./ip-address.reel",
             "properties": {
                 "element": {"#": "newEntry"},
                 "canChangeType": true
@@ -54,7 +58,7 @@
         },
 
         "entry": {
-            "prototype": "./table-row-route.reel",
+            "prototype": "./ip-address.reel",
             "properties": {
                 "element": {"#": "entry"}
             },
@@ -66,12 +70,12 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRoutes">
-        <div data-montage-id="table">
-            <div data-arg="table-editable-header-toolbar" data-montage-id="tableHeader"></div>
-            <div data-arg="row-new" data-montage-id="newEntry" class="Table-row"></div>
-            <div data-arg="row-entry" data-montage-id="entry" class="Table-row"></div>
-        </div>
+<div data-montage-id="owner" class="IpAliases">
+    <div data-montage-id="table">
+        <div data-arg="table-editable-header-toolbar" data-montage-id="tableHeader"></div>
+        <div data-arg="row-new" data-montage-id="newEntry" class="Table-row"></div>
+        <div data-arg="row-entry" data-montage-id="entry" class="Table-row"></div>
     </div>
+</div>
 </body>
 </html>
