--- a/ui/controls/ip-aliases.reel/ip-aliases.html
+++ b/ui/controls/ip-aliases.reel/ip-aliases.html
@@ -63,7 +63,8 @@
                 "element": {"#": "entry"}
             },
             "bindings": {
-                "object": {"<-": "@table:rowIteration.object.object"}
+                "object": {"<-": "@table:rowIteration.object.object"},
+                "isReadOnly": {"<-": "@owner.isReadOnly"}
             }
         }
     }
