removes code that hides available disks when they are empty…because then you can’t drag items back if needed. Cleaned up layout of available disks. Ticket: #20702

--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
@@ -16,8 +16,7 @@
                 }
             ],
             "bindings": {
-                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"},
-                "classList.has('is-hidden')": {"<-": "!@owner.disks.length "}
+                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
             }
         },
         "controller": {
