adds ellipsis to main sidebar user and host

--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -54,7 +54,9 @@
 <body>
     <div data-montage-id="owner" class="CurrentUserSummary">
         <div data-montage-id="user" class="CurrentUserSummary-user"></div>
-        <div data-montage-id="host" class="CurrentUserSummary-host"></div>
+        <div data-montage-id="host" class="CurrentUserSummary-host Button--naked">
+            <span data-montage-id="host-full" class="CurrentUserSummary-host-full"></span>
+        </div>
         <div class="CurrentUserSummary-time">
             <div data-montage-id="date"></div>
             <div data-montage-id="time"></div>
