cleans up list load more data styles

--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -88,8 +88,8 @@
             <div data-montage-id="repetition">
                 <div data-montage-id="item" class="List-item"></div>
             </div>
-            <div data-montage-id="stateSubstitution">
-                <div data-montage-id="loadButton" data-arg="load"></div>
+            <div data-montage-id="stateSubstitution" class="flex-row flex-justifyContent--center">
+                <div data-montage-id="loadButton" data-arg="load" class="Button--block g-margin--half"></div>
                 <div data-montage-id="loading" class="List-spinner" data-arg="loading"></div>
             </div>
         </div>
