ADDED: VM template and VM Tool Version

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -312,6 +312,26 @@
                 "value": {"<-": "!@owner.object.status.vm_tools_available ? 'Not detected' : 'Available'"}
             }
         },
+        "guestInfoVersion": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "label": "VM Tool Version",
+                "element": {"#": "guestInfoVersion"}
+            },
+            "bindings": {
+                "value": {"<-": "!@owner.object.guestInfo.version ? 'Not detected' : 'Available'"}
+            }        
+        },
+        "guestVmTemplate": {
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "label": "VM Template",
+                "element": {"#": "guestVmTemplate"}
+            },
+            "bindings": {
+                "value": {"<-": "!@owner.object.guestInfo.template ? 'Not detected' : 'Available'"}
+            }        
+        },
         "guestInfoLoadAvg": {
             "prototype": "blue-shark/ui/tables/table-read-only.reel",
             "properties": {
@@ -496,6 +516,8 @@
                 <div data-montage-id="guestToolsStatus" data-arg="unavailable"></div>
                 <div data-montage-id="guestTools" data-arg="available">
                     <div data-montage-id="guestInfoRefresh" class="g-margin-bottom"></div>
+                    <div data-montage-id="guestInfoVersion" class="g-margin-bottom"></div>
+                    <div data-montage-id="guestVmTemplate" class="g-margin-bottom"></div>
                     <div data-montage-id="guestInfoLoadAvg" class="g-margin-bottom"></div>
                     <div data-montage-id="guestInfoInterfaces" class="g-margin-bottom"></div>
                 </div>
