Fix typo (too simple to even merit a PR - this should be path, not port, for a volume entry).

--- a/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
+++ b/ui/sections/containers/controls/table-volume.reel/table-row-volume.reel/table-row-volume.html
@@ -78,7 +78,7 @@
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
                 "element": {"#": "containerPath"},
-                "placeholder": "e.g. container port"
+                "placeholder": "e.g. container path"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.container_path"},
